--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 bottle==0.13-dev
 future==0.15.2
 oauthlib==1.1.2
-python-twitter==3.1
+tweepy==3.5.0
 requests==2.10.0
 requests-oauthlib==0.6.2
 git+https://github.com/bitpixdigital/forecastiopy3.git
